--- a/main/chapter02.tex
+++ b/main/chapter02.tex
@@ -37,6 +37,17 @@
 如表\ref{tab:table-example}所示，
 
 
+\begin{lstlisting}[language=tex, label=lst:helloworld, caption=表-题注代码, numbers=left, basicstyle=\ttfamily]
+\begin{figure}[!htbp]
+\centering
+\includegraphics[width=0.5\linewidth]{figure/placeholder}
+\fcaption{中文标题}{英文标题}[目录标题]
+\label{fig:placeholder}
+\end{figure}
+\end{lstlisting}
+
+
+
 \begin{table}[!htbp]
 	\centering
 	\tcaption{中文表标题}{引文表标题}[目录表标题]
