--- a/main/chapter01.tex
+++ b/main/chapter01.tex
@@ -10,7 +10,13 @@
 %\bibliographystyle{TJU} %[此处用于每章都生产参考文献]
 
 
+\newcommand{\citeA}[1]{\citeauthor{#1}\cite{#1}}
+
 \chapter{绪~论}
 
-
 \section{研究背景}
+\citeA{whitcomb1991}
+
+测试引用\cite{humuyuan2015}\cite{humuyuan2015-2}\cite{hutengyue2014}\cite{whitcomb1991}
+
+\cite{humuyuan2015,humuyuan2015-2,hutengyue2014,whitcomb1991}
