--- a/thesis.tex
+++ b/thesis.tex
@@ -35,8 +35,8 @@
 \include{main/conclusion}
 
 
-%\include{app/appendix}
-%\include{app/app_log}
+\include{app/appendix}
+
 
 
 
@@ -52,7 +52,6 @@
 %% 致谢、发表论文、参与项目、简历
 \include{backmatter/ack} 	%% 致谢
 \include{backmatter/pub}	%% 发表论文
-%\include{backmatter/projects}  %% 参与的项目
-% \include{backmatter/resume}
+\include{backmatter/projects}  %% 参与的项目
 
 \end{document}
