--- a/frontmatter/id.tex
+++ b/frontmatter/id.tex
@@ -27,4 +27,9 @@
 \englishmajor{test}
 \englishdate{March, 2015}
 
+\resume{XXX，男，1989年4月生\\
+	
+2012年7月，毕业于同济大学航空航天与力学学院力学专业，获工学学士学位。\\
+2012年9月，开始攻读同济大学航空航天与力学学院硕士学位。
+	}
 
