--- a/main/conclusion.tex
+++ b/main/conclusion.tex
@@ -10,31 +10,13 @@
 \chapter*{总结与展望\markboth{总结与展望}{}}
 \addcontentsline{toc}{chapter}{总结与展望}
 
+\newcommand{\backsection}[1]{\vskip 3.8ex
+	\begin{flushleft}
+		{\zihao{-3}\textbf{#1}}
+	\end{flushleft}
+	\vskip 1.2ex}
 
 
-\vskip 3.8ex
-\begin{flushleft}
-	{\zihao{-3}\textbf{本文主要工作}}
-\end{flushleft}
-\vskip 1.2ex
-
-
-
-
-\vskip 3.8ex
-\begin{flushleft}
-	{\zihao{-3}\textbf{本文主要贡献}}
-\end{flushleft}
-\vskip 1.2ex
-
-
-
-
-\vskip 3.8ex
-\begin{flushleft}
-	{\zihao{-3}\textbf{下一步工作展望}}
-\end{flushleft}
-\vskip 1.2ex
-
-
-
+\backsection{本文主要工作}
+\backsection{本文主要贡献}
+\backsection{下一步工作展望}
